--- a/style/style.css
+++ b/style/style.css
@@ -43,7 +43,7 @@ body {
     -o-background-size: cover;
     background-size: cover;
 
-    color: rgba(0, 0, 0);
+    color: rgb(0, 0, 0);
     background-color: #f7f7f7;
 }
 
