--- a/style/game.css
+++ b/style/game.css
@@ -71,6 +71,15 @@ section.game {
     color: inherit;
 }
 
+section.game > #bgs > div.ingame_bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: center center / cover no-repeat;
+    transition: opacity 0.5s;
+    opacity: 0;
+}
+
 section.game > div.dialog {
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
@@ -109,6 +118,7 @@ section.game > #choice > button {
     /*margin: auto;*/
     margin: 1em auto;
     padding: 0.5em;
+    border: 0;
     border-radius: 1em;
     font: inherit;
 
