--- a/style/game.css
+++ b/style/game.css
@@ -1,6 +1,7 @@
 html {
     height: 100vh;
     width: 100vw;
+    overflow-y: hidden;
 }
 
 body {
@@ -18,7 +19,8 @@ body {
 
     font-size: 1rem;
     text-align: center;
-    overflow: hidden;
+    overflow-y: hidden;
+    position: relative;
     margin: 0;
 
     -webkit-background-size: cover;
