--- a/style/game.css
+++ b/style/game.css
@@ -128,3 +128,11 @@ section.game > #choice > button {
     background-color: #FA7268;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
 }
+
+section.game > #monologue {
+    display: flex;
+    background-color: black;
+    color: white;
+    align-items: center;
+    justify-content: center;
+}
