--- a/src/style/global.css
+++ b/src/style/global.css
@@ -28,7 +28,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 1em;
 	vertical-align: baseline;
 }
 article, aside, details, figcaption, figure, 
@@ -38,6 +38,10 @@ footer, header, hgroup, menu, nav, section {
 body {
 	font-size: 1.5rem;
 	/* line-height: 1; */
+}
+button, select {
+	text-transform: none;
+	cursor: pointer;
 }
 ol, ul {
 	list-style: none;
