데이터 불러오기 및 가공, 명령어와 연결 기능 추기
Signed-off-by: Kim Deokwon <codevillain@naver.com>

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -11,6 +11,14 @@
 	font-family: 'Spoqa Han Sans', 'Sans-serif';
 }
 
+*:not(input):not(textarea) {
+	-ms-user-select: none;
+	-moz-user-select: -moz-none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	user-select: none;
+}
+
 /* RESET CSS */
 html,
 body,
