--- a/src/components/Dialog/style.css
+++ b/src/components/Dialog/style.css
@@ -1,15 +1,14 @@
 .dialog {
-	z-index: 1;
+	z-index: 2;
 	position: absolute;
 	left: 0;
 	bottom: 0;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	min-height: 20%;
-	max-height: 25%;
+	min-height: 30%;
 	padding: 2vmin;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.6);
 }
 
 .dialog > .name {
@@ -23,4 +22,5 @@
 	height: 100%;
 	overflow: auto;
 	color: white;
+	word-break: keep-all;
 }
